:new: Creating new project
- Added provided BinaryTree.h
- Added provided BSTNode.h
- Added Unit Testing Project

--- a/ADS_2024_CA2_Petr_Sulc_Unit_Testing/ADS_2024_CA2_Petr_Sulc_Unit_Testing.vcxproj.filters
+++ b/ADS_2024_CA2_Petr_Sulc_Unit_Testing/ADS_2024_CA2_Petr_Sulc_Unit_Testing.vcxproj.filters
@@ -15,8 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ADS_2024_CA2_Petr_Sulc.cpp">
+    <ClCompile Include="ADS_2024_CA2_Petr_Sulc_Unit_Testing.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="pch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="pch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
