--- a/ADS_2024_CA2_Petr_Sulc/ADS_2024_CA2_Petr_Sulc.vcxproj
+++ b/ADS_2024_CA2_Petr_Sulc/ADS_2024_CA2_Petr_Sulc.vcxproj
@@ -129,6 +129,10 @@
   <ItemGroup>
     <ClCompile Include="ADS_2024_CA2_Petr_Sulc.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="BinaryTree.h" />
+    <ClInclude Include="BSTNode.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
