Binary Tree prints + Unit Tests
- Implementing InOrder, PreOrder and PostOrder prints
- Ensuring that the provided BinaryTree class works properly

--- a/ADS_2024_CA2_Petr_Sulc_Unit_Testing/ADS_2024_CA2_Petr_Sulc_Unit_Testing.vcxproj.filters
+++ b/ADS_2024_CA2_Petr_Sulc_Unit_Testing/ADS_2024_CA2_Petr_Sulc_Unit_Testing.vcxproj.filters
@@ -15,10 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ADS_2024_CA2_Petr_Sulc_Unit_Testing.cpp">
+    <ClCompile Include="BSTNodeUnitTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BinaryTreeUnitTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
