--- a/ADS_2024_CA2_Petr_Sulc_Unit_Testing/ADS_2024_CA2_Petr_Sulc_Unit_Testing.vcxproj
+++ b/ADS_2024_CA2_Petr_Sulc_Unit_Testing/ADS_2024_CA2_Petr_Sulc_Unit_Testing.vcxproj
@@ -156,7 +156,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ADS_2024_CA2_Petr_Sulc_Unit_Testing.cpp" />
+    <ClCompile Include="BSTNodeUnitTests.cpp" />
+    <ClCompile Include="BinaryTreeUnitTests.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
