Added TreeMap with unit tests
- Created KVPair struct
- Created TreeMap class
- Implemented required methods
- Added unit tests

--- a/ADS_2024_CA2_Petr_Sulc_Unit_Testing/ADS_2024_CA2_Petr_Sulc_Unit_Testing.vcxproj.filters
+++ b/ADS_2024_CA2_Petr_Sulc_Unit_Testing/ADS_2024_CA2_Petr_Sulc_Unit_Testing.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="BinaryTreeUnitTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TreeMapUnitTests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
