--- a/ADS_2024_CA2_Petr_Sulc/ADS_2024_CA2_Petr_Sulc.vcxproj
+++ b/ADS_2024_CA2_Petr_Sulc/ADS_2024_CA2_Petr_Sulc.vcxproj
@@ -128,12 +128,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ADS_2024_CA2_Petr_Sulc.cpp" />
+    <ClCompile Include="ApplicationPart2.cpp" />
     <ClCompile Include="TreeMap.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ApplicationPart2.h" />
     <ClInclude Include="BinaryTree.h" />
     <ClInclude Include="BSTNode.h" />
     <ClInclude Include="KVPair.h" />
+    <ClInclude Include="ValueList.h" />
+    <ClInclude Include="ValueNode.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="WordListPart2.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
